responsive layout bug fix

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -134,7 +134,7 @@ mat-sidenav {
 ////////////////////////////////////////////
 mat-sidenav-content {
   width: 100vw;
-  height: 100vh;
+  height: 93vh;
   background-image: url("../../assets/img/bg.png");
   position: fixed;
   overflow-y: hidden;
